<resources>
    <string name="app_name">FamilyMapApp</string>
    <!--LOGIN STRINGS-->
    <string name="host_label">Server Host:</string>
    <string name="host_hint">Enter the server host number</string>

    <string name="port_label">Server Port:</string>
    <string name="port_hint">Enter the server port number</string>

    <string name="username_label">Username:</string>
    <string name="username_hint">Enter a username</string>

    <string name="password_label">Password:</string>
    <string name="password_hint">Enter password</string>

    <string name="first_name_label">First Name:</string>
    <string name="first_name_hint">Enter first name</string>

    <string name="last_name_label">Last Name:</string>
    <string name="last_name_hint">Enter last name</string>

    <string name="email_label">Email:</string>
    <string name="email_hint">Enter email address</string>

    <string name="gender_label">Gender:</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>

    <string name="sign_in_button">Sign In</string>
    <string name="register_button">Register</string>


    <!--For CriminalIntent Example App-->
    <!--<string name="crime_title_hint">Enter a title for the crime.</string>-->
    <!--<string name="crime_title_label">Title</string>-->
    <!--<string name="crime_details_label">Details</string>-->
    <!--<string name="crime_solved_label">Solved</string>-->
    <!--End CriminalIntent Strings-->

    <!--From given login activity-->
    <string name="title_activity_given_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <!--End given login strings-->
</resources>
